--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
-        <link rel="stylesheet" type="text/css" href="css/main.css">
+        <title> **TEMPLATE**</title>
+        <link rel="stylesheet" type="text/css" href="_css/main.css">
     </head>
     <div id="page">
     <body>
         <div id="header">
-            <h1>Vanessa Martinez-my site</h1>
+            <h1>Vanessa Martinez</h1>
            <div id=nav>
                <a href= "https://htmlcss-Nessi12.c9.io/index.html">Home</a>
                <a href= "https://htmlcss-Nessi12.c9.io/contact.thml">Contact Us</a>
@@ -15,30 +15,16 @@
            </div> 
         </div>
         <div id="content">
-                <h2> DIVS</h2>
-                    <h3>DIV tag definition</h3>
-                    <div class="spotlight">
-                        <p>The DIV tag on its own doesn't do much.</p>
-                        <ul>
-                            <li>The DIV tag had no default styling</li>
-                            <li>The DIV tag defines content areas</li>
-                            <li> HTML is not funny</li>
-                        </ul>
-                    </div>
-                <h2>DIV tag usage</h2>
-                    <p>Assigning an id to a tag allows us to style that tag (and all its nested tags) directly through CSS</p>
-                    <p> To give that id styling it must be named as a selector, along with its declaration block, and preceded by a pound sign (hashtag symbol)</p>
-                <h2> ID usage</h2>
-                    <p> The id allows us to identify tags so that they may specifically be addressed within the CSS file</p>
+                   <h2>It’s Not Just Going To School. It’s Learning Life.</h2>
+           <p>The Patiño School of Entrepreneurship  is a new model for secondary education. 
+           It’s an applied entrepreneurship school that fosters real world skills — critical thinking, problem solving, and collaboration — and as seniors, students launch their own companies.</p>
+        <h2>Thinking Outside Of The Box</h2>
+        <p>As a foundation for learning, students begin mastering technology: computer literacy, web navigation, website creation, online marketing and coding.
+        By graduation, students will have developed, pitched, and started their own business, and in the process will have learned valuable life and career skills, including working in teams, thinking critically, analyzing data, leading, navigating technology, prioritizing, making decisions, and negotiating. Students learn to work hard, 
+        think outside of the boundaries, be team players, and not be afraid to try new things.</p>
         </div>
         <div id="footer">
-            <h3> List Titile</h3>
-                <ul>
-                    <li> List item 1</li>
-                    <li> List item 2</li>
-                    <li> List item 3</li>
-                </ul>
-        </div>
+           
         </div>
     </body>
 </html>
